# deep-portfolio-theory

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
configs/: default.yaml
docs/: open_questions.md  paper_notes.md  paper_spec.md
reports/cycle_1/: loss_log.json  metrics.json  preflight.md  technical_findings.md
reports/cycle_2/: metrics.json  preflight.md  technical_findings.md
reports/cycle_3/: benchmark_returns.json  metrics.json  preflight.md
reports/cycle_4/: benchmark_returns.json  deep_portfolio_ae_returns.json  metrics.json  preflight.md  technical_findings.md
reports/cycle_5/: metrics.json  performance_summary.md  preflight.md  technical_findings.md
scripts/: generate_report.py  prepare_data.py  run_benchmarks.py  run_deep_portfolio.py
src/: train.py
src/data/: loader.py
src/evaluation/: framework.py  metrics.py
src/models/: __init__.py  autoencoder.py
src/strategies/: benchmarks.py  deep_portfolio.py
tests/: test_data_integrity.py  test_models.py
